# face_gender_pred

./: .gitignore
services/predict/: Dockerfile.api  Dockerfile.frontend  Makefile  README.md  app.py  docker-compose.yml  pyproject.toml  requirements.txt  requirements_frontend.txt  run.py  s3_utils.py  upload_models.py
